--- a/index.html
+++ b/index.html
@@ -1,43 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>test WayUp</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/css/style.css">
+	<title>Document</title>
 </head>
 <body>
-    <header>
-        <img src="https://wayup.in/courses/course10/lesson2/logo.jpg" alt="logo">
-        <h1>Вступление H1</h1>
-        <div class="firsttext"><p>Это текст моего второго домашнего задания.</p></div>
-        <p>Не верится, но мне уже удается писать <span>свой первый код на HTML. </span></p>
-    </header>
-    <section >
-        <h2 class="title">Что дальше? H2</h2>
-        <p>Дальше, я буду получать все больше и больше опыта в разработке сайтов, чтобы достичь новых вершин!
-        <a href="https://www.google.ru/" target="_blank">Прочитать больше в Google</a></p>
-    </section>     
-     <section class="what">
-        <h2>Что я буду уметь? H2</h2>
-        <p class="ican">Я смогу создавать вот такие замечательные формы:</p>
-        <form action="№">
-            <input type="text" placeholder="Имя" required>
-            <input type="email" placeholder="E-mail" required>
-            <input type="tel" placeholder="Телефон" required>
-            <button>Отправить форму</button>
-        </form>
-        <p>А также, я научусь создавать списки:</p>
-        <ul>
-            <li>С одним пунктом</li>
-            <li>С несколькими пунктами</li>
-            <li>И даже с тремя тдельными пунктами</li>
-        </ul>
-     </section>  
-    <footer>
-        <h2 class="title">Отличное начало! H2</h2>
-        <a href="https://wayup.in/cabinet/course10-18-wave/unit1/lesson1" target="_blank">Перейти на страницу первого занятия курса</a>
-    </footer>
-    </body>
+	<header class="header">
+		<div class="wrapper">
+			<img src="/img/logo.png" alt="logo" class="logo">
+			<div class="header__wrapper">
+				<div class="header__block">
+						<h1>С помощью верстки <br>
+							я создам ту жизнь, о которой
+						<span>мечтаю!</span>
+						</h1>
+						<p>Мои стремления + настойчивость позволят мне ,достичь чего угодно. Я не верю в это. Я знаю это на 100%. Меня не остановить!
+						</p>
+						<a href="#" class="btn">Двигаться к мечте!</a>
+				</div>
+				<img src="/img/header.png" alt="" class="header__img">
+			</div>
+		</div>
+	</header>
+
+	<section class="what">
+		<div class="wrapper">
+			<h2>Что меня ждет впереди</h2>
+			<div class="section__contant">
+				<div class="contant__block">
+					<img src="/img/what1.png" alt="">
+					<h3>Свободное время</h3>
+					<p>Мне нужно свободное время на семью и самое настоящее</p>
+				</div>
+				<div class="contant__block">
+					<img src="/img/what2.png" alt="">
+					<h3>Яркие путешествия</h3>
+					<p>Работать откуда угодно - что может быть лучше?</p>
+				</div>
+				<div class="contant__block">
+					<img src="/img/what3.png" alt="">
+					<h3>Создание ценности</h3>
+					<p>Нет ничего сильнее, чем жить не просто так, создавая ценность</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section__form">
+		<div class="wrapper">
+			<h2>Форма заказа билета в будущее</h2>
+			<form class="form">
+				<input class="form__window" placeholder="Имя" type="text" required>
+				<input class="form__window" placeholder="E-mail" type="email" required>
+				<input class="form__window" placeholder="Телефон" type="tel" required>
+				<input class="form__window" placeholder="Куда я полечу в ближайшее время?" type="text" required>
+				<a href="#" class="btn form-btn">Двигаться к мечте!</a>
+			</form>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="wrapper">
+			<p class="footer__info">© Все мои мечты защищены моим трудолюбием</p>
+		</div>
+	</footer>
+</body>
 </html>
