--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Document</title>
 </head>
 <body>
 	<header class="header">
 		<div class="wrapper">
-			<img src="/img/logo.png" alt="logo" class="logo">
+			<img src="img/logo.png" alt="logo" class="logo">
 			<div class="header__wrapper">
 				<div class="header__block">
 						<h1>С помощью верстки <br>
