--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						</p>
 						<a href="#" class="btn">Двигаться к мечте!</a>
 				</div>
-				<img src="/img/header.png" alt="" class="header__img">
+				<img src="img/header.png" alt="spase" class="header__img">
 			</div>
 		</div>
 	</header>
@@ -31,17 +31,17 @@
 			<h2>Что меня ждет впереди</h2>
 			<div class="section__contant">
 				<div class="contant__block">
-					<img src="/img/what1.png" alt="">
+					<img src="img/what1.png" alt="">
 					<h3>Свободное время</h3>
 					<p>Мне нужно свободное время на семью и самое настоящее</p>
 				</div>
 				<div class="contant__block">
-					<img src="/img/what2.png" alt="">
+					<img src="img/what2.png" alt="">
 					<h3>Яркие путешествия</h3>
 					<p>Работать откуда угодно - что может быть лучше?</p>
 				</div>
 				<div class="contant__block">
-					<img src="/img/what3.png" alt="">
+					<img src="img/what3.png" alt="">
 					<h3>Создание ценности</h3>
 					<p>Нет ничего сильнее, чем жить не просто так, создавая ценность</p>
 				</div>
